solved Ui overflow problem

--- a/packages/vector/themes/basic.styl
+++ b/packages/vector/themes/basic.styl
@@ -18,13 +18,14 @@ html,body
 
 #vector.container-fluid
   position relative
-  height 100%
-  overflow hidden
   z-index 2
+  height 100%
 
   h1
     font-weight 100!important
-    padding-bottom 15px
+    margin 0
+    padding 20px 0 25px 0
+    background light
 
   ul
     margin-bottom 0!important
@@ -95,9 +96,8 @@ html,body
           background-position center
 
   #vectorEdit
+    padding 50px 30px 0 30px
     height 100%
-    overflow hidden
-    padding 0 30px
 
   #vectorCollection
     border-right 1px solid medium
@@ -150,6 +150,9 @@ html,body
     padding 0 30px
     font-size 1.5em
     font-weight 100
+    position fixed
+    z-index 1
+    width 100%
 
     li
       display inline
@@ -163,9 +166,10 @@ html,body
         color medium
 
   #vectorNavSide
-    position absolute
+    position fixed
     right 30px
     top 0
+    z-index 2
 
     li
       display inline
